force-app/main/default/objects/Application__c/fields/Application_Date_Received__c.field-meta.xml
<CustomField>
    <fullName>Application_Date_Received__c</fullName>
    <description>Signifies date email was sent to ACQSC with application forms</description>
    <label>Application Date Received</label>
    <type>Date</type>
</CustomField>