force-app/main/default/objects/Application__c/fields/Application_Reference_Number_AN__c.field-meta.xml
<CustomField>
    <fullName>Application_Reference_Number_AN__c</fullName>
    <description>Unique identifies of application</description>
    <displayFormat>{000}</displayFormat>
    <label>Application Reference Number</label>
    <type>AutoNumber</type>
</CustomField>