force-app/main/default/objects/Application__c/fields/Application_Reference_Number_F__c.field-meta.xml
<CustomField>
    <fullName>Application_Reference_Number_F__c</fullName>
    <formula>IF( MONTH(Application_Date_Received__c)&lt;=6, RIGHT(TEXT(YEAR(Application_Date_Received__c)-1),2) &amp; &apos;/&apos; &amp; (RIGHT(TEXT(YEAR(Application_Date_Received__c)),2)), RIGHT(TEXT(YEAR(Application_Date_Received__c)),2) &amp; &apos;/&apos;&amp; RIGHT(TEXT(YEAR(Application_Date_Received__c)+1),2))&amp;&apos;-&apos;&amp;if(LEN(Reference_Number__c)=2,&quot;0&quot;,&quot;&quot;) &amp;if(LEN(Reference_Number__c)=1,&quot;00&quot;,&quot;&quot;)&amp;  Reference_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Reference Number</label>
    <type>Text</type>
</CustomField>