force-app/main/default/objects/Application__c/fields/Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Status__c</fullName>
    <description>Distinguishes application by part of application process</description>
    <label>Application Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application Submission Receipt</fullName>
                <default>true</default>
                <label>Application Submission Receipt</label>
            </value>
            <value>
                <fullName>Application Submitted - Fee Payment Pending</fullName>
            </value>
            <value>
                <fullName>Application Not Required - Already Approved</fullName>
            </value>
            <value>
                <fullName>Application Not Required - Taken To Be Approved</fullName>
            </value>
            <value>
                <fullName>Application Invalid - Not Accepted</fullName>
            </value>
            <value>
                <fullName>For Assessment</fullName>
            </value>
            <value>
                <fullName>Under Assessment</fullName>
            </value>
            <value>
                <fullName>For Review</fullName>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>Application Submitted - RFI</fullName>
            </value>
            <value>
                <fullName>Assessment RFI - Response Pending</fullName>
            </value>
            <value>
                <fullName>Withdrawn - By Applicant</fullName>
            </value>
            <value>
                <fullName>Withdrawn - Under 63</fullName>
            </value>
            <value>
                <fullName>Recommendation to Delegate</fullName>
            </value>
            <value>
                <fullName>Delegate&apos;s Decision</fullName>
            </value>
            <value>
                <fullName>Finalise</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Decision Made</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
            <value>
                <fullName>Not Approved (threshold criteria not met)</fullName>
            </value>
            <value>
                <fullName>Received - not ready for assessment</fullName>
            </value>
            <value>
                <fullName>Received - ready for assessment</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>