force-app/main/default/objects/Application__c/fields/Application_Status_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Status_Effective_Date__c</fullName>
    <label>Application Status Effective Date</label>
    <type>Date</type>
</CustomField>