force-app/main/default/objects/Application__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Appears in ACQSC user&apos;s queue</description>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Applications1</relationshipName>
    <type>Lookup</type>
</CustomField>