force-app/main/default/objects/Application__c/fields/Care_Type_s__c.field-meta.xml
<CustomField>
    <fullName>Care_Type_s__c</fullName>
    <description>Identify application by care type</description>
    <label>Care Type(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Home Care</fullName>
            </value>
            <value>
                <fullName>Flexible</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>