force-app/main/default/objects/Application__c/fields/Case_Record_Exists__c.field-meta.xml
<CustomField>
    <fullName>Case_Record_Exists__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Record Exists?</label>
    <type>Checkbox</type>
</CustomField>