force-app/main/default/objects/Application__c/fields/Duplicate_Active_Application_Exist__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Active_Application_Exist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duplicate Active Application Exist</label>
    <type>Checkbox</type>
</CustomField>