force-app/main/default/objects/Application__c/fields/Duplicate_Care_Type__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Care_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duplicate Care Type</label>
    <type>Checkbox</type>
</CustomField>