force-app/main/default/objects/Application__c/fields/Legacy_Application_Number__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Application_Number__c</fullName>
    <description>This is used to data migration for NAPS application number</description>
    <label>Legacy Application Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>