force-app/main/default/objects/Application__c/fields/Reconsideration__c.field-meta.xml
<CustomField>
    <fullName>Reconsideration__c</fullName>
    <formula>IF(Case_Record_Exists__c,&quot;Yes&quot;,&quot;No&quot;)</formula>
    <label>Reconsideration</label>
    <type>Text</type>
</CustomField>