force-app/main/default/objects/Application__c/fields/Reconsideration_Outcome_Not_Recorded__c.field-meta.xml
<CustomField>
    <fullName>Reconsideration_Outcome_Not_Recorded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reconsideration Outcome Not Recorded</label>
    <type>Checkbox</type>
</CustomField>