force-app/main/default/objects/Application__c/fields/Same_Assessor__c.field-meta.xml
<CustomField>
    <fullName>Same_Assessor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Same Assessor?</label>
    <type>Checkbox</type>
</CustomField>