force-app/main/default/objects/Application__c/fields/Same_Delegate__c.field-meta.xml
<CustomField>
    <fullName>Same_Delegate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Same Delegate?</label>
    <type>Checkbox</type>
</CustomField>