force-app/main/default/objects/Application__c/fields/Same_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Same_Reviewer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Same Reviewer?</label>
    <type>Checkbox</type>
</CustomField>