force-app/main/default/objects/Application__c/recordTypes/Application_APP.recordType-meta.xml
<RecordType>
    <fullName>Application_APP</fullName>
    <active>true</active>
    <label>Application</label>
</RecordType>