force-app/main/default/objects/Application__c/recordTypes/Application_Not_Required_Taken_To_Be_Approved_APP.recordType-meta.xml
<RecordType>
    <fullName>Application_Not_Required_Taken_To_Be_Approved_APP</fullName>
    <active>true</active>
    <label>Application Not Required - Taken To Be Approved</label>
</RecordType>