force-app/main/default/objects/Application__c/recordTypes/Application_Submission_Receipt_APP.recordType-meta.xml
<RecordType>
    <fullName>Application_Submission_Receipt_APP</fullName>
    <active>true</active>
    <label>Application Submission Receipt</label>
</RecordType>