force-app/main/default/objects/Application__c/recordTypes/Application_Submitted_Fee_Payment_Pending_APP.recordType-meta.xml
<RecordType>
    <fullName>Application_Submitted_Fee_Payment_Pending_APP</fullName>
    <active>true</active>
    <label>Application Submitted - Fee Payment Pending</label>
</RecordType>