force-app/main/default/objects/Application__c/recordTypes/Application_Submitted_RFI.recordType-meta.xml
<RecordType>
    <fullName>Application_Submitted_RFI</fullName>
    <active>true</active>
    <label>Application Submitted - RFI</label>
</RecordType>