force-app/main/default/objects/Application__c/recordTypes/Assessment_RFI_Response_Pending_APP.recordType-meta.xml
<RecordType>
    <fullName>Assessment_RFI_Response_Pending_APP</fullName>
    <active>true</active>
    <label>Assessment RFI - Response Pending</label>
</RecordType>