force-app/main/default/objects/Application__c/recordTypes/Closed_APP.recordType-meta.xml
<RecordType>
    <fullName>Closed_APP</fullName>
    <active>true</active>
    <label>Closed</label>
</RecordType>