force-app/main/default/objects/Application__c/recordTypes/Closed_Locked_APP.recordType-meta.xml
<RecordType>
    <fullName>Closed_Locked_APP</fullName>
    <active>true</active>
    <label>Closed Locked</label>
</RecordType>