force-app/main/default/objects/Application__c/recordTypes/Delegate_s_Decision_APP.recordType-meta.xml
<RecordType>
    <fullName>Delegate_s_Decision_APP</fullName>
    <active>true</active>
    <label>Delegate&apos;s Decision</label>
</RecordType>