force-app/main/default/objects/Application__c/recordTypes/Finalise_APP.recordType-meta.xml
<RecordType>
    <fullName>Finalise_APP</fullName>
    <active>true</active>
    <label>Finalise</label>
</RecordType>