force-app/main/default/objects/Application__c/recordTypes/For_Assessment_APP.recordType-meta.xml
<RecordType>
    <fullName>For_Assessment_APP</fullName>
    <active>true</active>
    <label>For Assessment</label>
</RecordType>