force-app/main/default/objects/Application__c/recordTypes/For_Review_APP.recordType-meta.xml
<RecordType>
    <fullName>For_Review_APP</fullName>
    <active>true</active>
    <label>For Review</label>
</RecordType>