force-app/main/default/objects/Application__c/recordTypes/Inactive_Application_APP.recordType-meta.xml
<RecordType>
    <fullName>Inactive_Application_APP</fullName>
    <active>true</active>
    <label>Inactive Application</label>
</RecordType>