force-app/main/default/objects/Application__c/recordTypes/Recommendation_to_Delegate_APP.recordType-meta.xml
<RecordType>
    <fullName>Recommendation_to_Delegate_APP</fullName>
    <active>true</active>
    <label>Recommendation to Delegate</label>
</RecordType>