force-app/main/default/objects/Application__c/recordTypes/Under_Assessment_APP.recordType-meta.xml
<RecordType>
    <fullName>Under_Assessment_APP</fullName>
    <active>true</active>
    <label>Under Assessment</label>
</RecordType>