force-app/main/default/objects/Application__c/recordTypes/Under_Review_APP.recordType-meta.xml
<RecordType>
    <fullName>Under_Review_APP</fullName>
    <active>true</active>
    <label>Under Review</label>
</RecordType>