force-app/main/default/objects/Application__c/validationRules/Payment_Reference_Number_Edit_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Reference_Number_Edit_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT($Setup.BypassTriggers__c.BypassValidationRules__c),NOT(ISNEW()),ISCHANGED(Payment_Reference_Number__c),NOT(ISPICKVAL(Application_Status__c,&apos;Application Submission Receipt&apos;)))</errorConditionFormula>
    <errorMessage>Payment Reference Number cannot be updated.</errorMessage>
</ValidationRule>