force-app/main/default/objects/Application__c/validationRules/Reconsideration_Outcome_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Reconsideration_Outcome_Check</fullName>
    <active>true</active>
    <description>Checks if reconsideration outcome recorded before closing the application.</description>
    <errorConditionFormula>Reconsideration_Outcome_Not_Recorded__c == true</errorConditionFormula>
    <errorMessage>Please record &apos;Reconsideration Outcome&apos; before closing the application.</errorMessage>
</ValidationRule>