force-app/main/default/objects/Application__c/validationRules/Same_Assessor_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Same_Assessor_Check</fullName>
    <active>true</active>
    <errorConditionFormula>Same_Assessor__c == true</errorConditionFormula>
    <errorMessage>&apos;This user was a part of the initial assessment process. Please select another user.&apos;</errorMessage>
</ValidationRule>