force-app/main/default/objects/Application__c/validationRules/Same_Delegate_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Same_Delegate_Check</fullName>
    <active>true</active>
    <errorConditionFormula>Same_Delegate__c == true</errorConditionFormula>
    <errorMessage>&apos;This user was a part of the initial delegation process. Please select another user.&apos;</errorMessage>
</ValidationRule>