force-app/main/default/objects/Application__c/validationRules/Same_Reviewer_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Same_Reviewer_Check</fullName>
    <active>true</active>
    <errorConditionFormula>Same_Reviewer__c == true</errorConditionFormula>
    <errorMessage>&apos;This user was a part of the initial review process. Please select another user.&apos;</errorMessage>
</ValidationRule>