force-app/main/default/objects/Application__c/validationRules/VR01_APP_AppStatusCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>VR01_APP_AppStatusCheck</fullName>
    <active>true</active>
    <description>Application Status cannot be set to &apos;For Assessment&apos; or &apos;Under Review&apos; if &apos;Payment Reference Number&apos; isn&apos;t provided</description>
    <errorConditionFormula>AND(NOT($Setup.BypassTriggers__c.BypassValidationRules__c),ISBLANK(Payment_Reference_Number__c),ISPICKVAL(Application_Status__c, &apos;For Assessment&apos;) || ISPICKVAL(Application_Status__c, &apos;Under Review&apos;) || ISPICKVAL(Application_Status__c , &apos;Under Assessment&apos;))</errorConditionFormula>
    <errorDisplayField>Payment_Reference_Number__c</errorDisplayField>
    <errorMessage>Please provide &apos;Payment Reference Number&apos; before setting &apos;Application Status&apos; to &apos;For Assessment&apos;, &apos;Under Review&apos; or &apos;Under Assessment&apos;.</errorMessage>
</ValidationRule>