force-app/main/default/objects/Application__c/validationRules/VR02_APP_AppDateReceived.validationRule-meta.xml
<ValidationRule>
    <fullName>VR02_APP_AppDateReceived</fullName>
    <active>true</active>
    <description>Application Date Received cannot be a future date</description>
    <errorConditionFormula>Application_Date_Received__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Application_Date_Received__c</errorDisplayField>
    <errorMessage>Application Date Received cannot be a future date</errorMessage>
</ValidationRule>