force-app/main/default/objects/Application__c/validationRules/VR03_APP_AssignedToSameUser.validationRule-meta.xml
<ValidationRule>
    <fullName>VR03_APP_AssignedToSameUser</fullName>
    <active>false</active>
    <description>Validate that application is not getting assigned to same user</description>
    <errorConditionFormula>AND(
Reconsideration__c=&apos;Yes&apos;,
PRIORVALUE(OwnerId) = OwnerId
)</errorConditionFormula>
    <errorMessage>This application cannot be assigned to same person again</errorMessage>
</ValidationRule>