force-app/main/default/objects/Application__c/validationRules/VR03_APP_Status_UnderAssessment.validationRule-meta.xml
<ValidationRule>
    <fullName>VR03_APP_Status_UnderAssessment</fullName>
    <active>true</active>
    <description>Owner must be changed to a user before status is changed to &apos;Under Assessment&apos;</description>
    <errorConditionFormula>AND(ISBLANK(Owner:User.Id),TEXT(Application_Status__c)=&quot;Under Assessment&quot;)</errorConditionFormula>
    <errorMessage>Owner must be changed to a user before status is changed to &apos;Under Assessment&apos;.</errorMessage>
</ValidationRule>