force-app/main/default/objects/Application__c/validationRules/VR04_APP_AssignedToFirstTime.validationRule-meta.xml
<ValidationRule>
    <fullName>VR04_APP_AssignedToFirstTime</fullName>
    <active>false</active>
    <description>Validate if the application is assigned to same person who is creating that application</description>
    <errorConditionFormula>AND(  ISBLANK(PRIORVALUE(CreatedById)),Assigned_To__r.Id &lt;&gt; CreatedById)</errorConditionFormula>
    <errorDisplayField>Assigned_To__c</errorDisplayField>
    <errorMessage>Assigned To must be the same person who is creating this application</errorMessage>
</ValidationRule>