force-app/main/default/objects/Application__c/validationRules/VR04_APP_Status_UnderReview.validationRule-meta.xml
<ValidationRule>
    <fullName>VR04_APP_Status_UnderReview</fullName>
    <active>true</active>
    <description>Owner must be changed to a user before status is changed to &apos;Under Review&apos;</description>
    <errorConditionFormula>AND(ISBLANK(Owner:User.Id),TEXT(Application_Status__c)=&quot;Under Review&quot;)</errorConditionFormula>
    <errorMessage>Owner must be changed to a user before status is changed to &apos;Under Review&apos;.</errorMessage>
</ValidationRule>