force-app/main/default/objects/Application__c/validationRules/VR05_APP_Delegates_Decision.validationRule-meta.xml
<ValidationRule>
    <fullName>VR05_APP_Delegates_Decision</fullName>
    <active>true</active>
    <description>Owner must be changed to a user before status is changed to &apos;Delegate&apos;s Decision&apos;.</description>
    <errorConditionFormula>AND(ISBLANK(Owner:User.Id),TEXT(Application_Status__c)=&quot;Delegate&apos;s Decision&quot;)</errorConditionFormula>
    <errorMessage>Owner must be changed to a user before status is changed to &apos;Delegate&apos;s Decision&apos;.</errorMessage>
</ValidationRule>