force-app/main/default/objects/Application__c/validationRules/VR06_APP_Duplicate.validationRule-meta.xml
<ValidationRule>
    <fullName>VR06_APP_Duplicate</fullName>
    <active>true</active>
    <description>Only one active application can exist.</description>
    <errorConditionFormula>Duplicate_Active_Application_Exist__c = TRUE</errorConditionFormula>
    <errorMessage>There is already an active application form.</errorMessage>
</ValidationRule>