force-app/main/default/objects/Application__c/validationRules/VR06_Care_Type_Duplicate.validationRule-meta.xml
<ValidationRule>
    <fullName>VR06_Care_Type_Duplicate</fullName>
    <active>true</active>
    <description>Care types wrong. There is already approved care type existed.</description>
    <errorConditionFormula>Duplicate_Care_Type__c = TRUE</errorConditionFormula>
    <errorMessage>Care types wrong. There is already approved care type existed.</errorMessage>
</ValidationRule>