force-app/main/default/objects/Application__c/validationRules/VR08_APP_AppStatusCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>VR08_APP_AppStatusCheck</fullName>
    <active>true</active>
    <description>Application Status cannot be set to &apos;For Assessment&apos; or &apos;Under Review&apos; if &apos;Payment Reference Number&apos; isn&apos;t provided</description>
    <errorConditionFormula>AND(NOT($Setup.BypassTriggers__c.BypassValidationRules__c),ISBLANK(Payment_Reference_Number__c),ISPICKVAL(Application_Status__c, &apos;Application Submission Receipt&apos;))</errorConditionFormula>
    <errorDisplayField>Payment_Reference_Number__c</errorDisplayField>
    <errorMessage>&apos;Payment Reference Number&apos; must be entered in &apos;Application Submission Receipt&apos; Status</errorMessage>
</ValidationRule>