force-app/main/default/objects/Application__c/listViews/Application_Recommendation_to_Delegate.listView-meta.xml
<ListView>
    <fullName>Application_Recommendation_to_Delegate</fullName>
    <columns>NAME</columns>
    <columns>Application_Reference_Number_F__c</columns>
    <columns>Application_Status__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Application_Status__c</field>
        <operation>equals</operation>
        <value>Recommendation to Delegate</value>
    </filters>
    <label>Application - Recommendation to Delegate</label>
</ListView>