force-app/main/default/objects/Application__c/listViews/Applications_Assigned_To_Me.listView-meta.xml
<ListView>
    <fullName>Applications_Assigned_To_Me</fullName>
    <columns>NAME</columns>
    <columns>Application_Reference_Number_F__c</columns>
    <columns>Account__c</columns>
    <columns>Application_Status__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>Applications Assigned To Me</label>
</ListView>