force-app/main/default/objects/Application__c/listViews/Applications_For_Review.listView-meta.xml
<ListView>
    <fullName>Applications_For_Review</fullName>
    <columns>NAME</columns>
    <columns>Application_Reference_Number_F__c</columns>
    <columns>Application_Status__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Application_Status__c</field>
        <operation>equals</operation>
        <value>For Review</value>
    </filters>
    <label>Applications For Review</label>
</ListView>