force-app/main/default/objects/Application__c/listViews/Delegate_Application.listView-meta.xml
<ListView>
    <fullName>Delegate_Application</fullName>
    <columns>NAME</columns>
    <columns>Application_Reference_Number_F__c</columns>
    <columns>Application_Status__c</columns>
    <columns>Reconsideration__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Queue</filterScope>
    <label>Delegate</label>
    <queue>Delegate</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>